--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,19 @@
-# Compiled class file
-*.class
+### IntelliJ ###
+.idea/
+*.iml
 
-# Log file
+### Gradle ###
+.gradle/
+build/
+out/
+!gradle/wrapper/gradle-wrapper.properties
+!gradle/wrapper/gradle-wrapper.jar
+
+### Logs ###
 *.log
 
-# BlueJ files
-*.ctxt
+### OS ###
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+.env
