--- a/backend/queue-service/src/main/resources/application.yml
+++ b/backend/queue-service/src/main/resources/application.yml
@@ -4,14 +4,13 @@ server:
 spring:
   application:
     name: queue-service
-  config:
-    import: optional:file:.env[.properties]
+#  config:
+#    import: optional:file:.env[.properties]
 
   datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${QUEUE_DB}
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/${QUEUE_DB:bidket_queue}
+    username: ${POSTGRES_USER:bidket}
+    password: ${POSTGRES_PASSWORD:bidket}
 
   jpa:
     hibernate:
@@ -20,7 +19,6 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-
   data:
     redis:
       host: localhost
