--- a/backend/queue-service/src/main/resources/application.yml
+++ b/backend/queue-service/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   application:
     name: queue-service
-#  config:
-#    import: optional:file:.env[.properties]
+  config:
+    import: optional:file:.env[.properties]
 
   datasource:
     url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/${QUEUE_DB:bidket_queue}
@@ -27,4 +27,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_SERVER_URL}
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
