--- a/backend/queue-service/src/main/resources/application-test.yml
+++ b/backend/queue-service/src/main/resources/application-test.yml
@@ -8,9 +8,9 @@ spring:
     import: optional:file:.env[.properties]
 
   datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${USER_DB}
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
 
   jpa:
     hibernate:
@@ -31,4 +31,4 @@ eureka:
 
 jwt:
   secret: ${JWT_SECRET}
-  expire: ${JWT_EXPIRED_AT}
+  expired_at: ${JWT_EXPIRED_AT}
