chore: 자동 배포 테스트용 주석 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,4 @@ jobs:
         run: |
           ssh -i ~/.ssh/bidket.pem ubuntu@${{ secrets.EC2_HOST }} \
           "bash /opt/bidket/run.sh"
+# 배포 테스트용 임시 주석
