feat: product-service 생성
  - settings.gradle에 product-service 모듈 등록
  - docker-compose.yml에 product-service 설정
  - init.sql에 상품 DB(bidket_product) 생성
  - 로컬 application-local.yml 구성

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ GATEWAY_PORT=8000
 
 # DB
 USER_DB=bidket_user
-## 신발 DB
+PRODUCT_DB=bidket_product
 AUCTION_DB=bidket_auction
 QUEUE_DB=bidket_queue
 ORDER_DB=bidket_order
