--- a/backend/order-service/build.gradle
+++ b/backend/order-service/build.gradle
@@ -15,7 +15,8 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+    runtimeOnly 'org.postgresql:postgresql'
     implementation 'com.github.Bidket:bidket-common-repo:main-SNAPSHOT'
 }
